# SkiaUI

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/: rml_layer_desk.rml
assets/skui_demo/: layers.html
assets/skui_dynamic_dom_demo/: dynamic_dom.css  dynamic_dom.html
assets/skui_relay_demo/: relaydesk.html
assets/skui_text_file_demo/: text_file.html
assets/skui_video_demo/: video_demo.html
cmake/: SkiaUIConfig.cmake.in
cmake/vcpkg-overlays/ports/skia/: portfile.cmake
cmake/vcpkg-overlays/ports/skia/example/: skcms.cpp  skpathediting.cpp
cmake/vcpkg-overlays/triplets/: x64-windows-static-md-ue.cmake
docs/: cpp-code-standard.md  skia_ui_framework_design.md  skui_css_dom_support.md  skui_integration_guide.md  skui_video_playback_plan.md
docs/knowledge/: architecture.md  performance.md  testing-and-debugging.md
src/: d3d_context.cpp  d3d_context.h  d3d_presenter.cpp  d3d_presenter.h  layer_desk.cpp  main.cpp  perf_trace.h  rml_layer_desk.cpp
src/skui/core/: skui_internal.h  skui_layout.cpp  skui_media_controller.cpp  skui_media_controller.h  skui_parser.cpp  skui_runtime.cpp  skui_utils.cpp
src/skui/media/: ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_media_player.cpp
src/skui/platform/: frame_pacing_monitor.cpp  frame_pacing_monitor.h  wasapi_audio_output.cpp  win32_dx12_app.cpp  win32_event_adapter.cpp
src/skui/public/: skui_dropdown.h  skui_ffmpeg.h  skui_media.h  skui_runtime.h  skui_runtime_helpers.h  skui_virtual_table.h  skui_virtual_window.h  skui_win32_app.h  skui_win32_audio.h  skui_win32_event_adapter.h
src/skui/render/: skui_skia_renderer.cpp
src/skui_demo/: main.cpp
src/skui_dynamic_dom_demo/: main.cpp
src/skui_html_previewer/: main.cpp
src/skui_image_scroller_demo/: main.cpp
src/skui_relay_demo/: main.cpp
src/skui_text_file_demo/: main.cpp
src/skui_video_demo/: main.cpp
tests/: skui_ffmpeg_player_tests.cpp  skui_interaction_tests.cpp  skui_keyboard_event_tests.cpp  skui_layout_document_tests.cpp  skui_media_runtime_tests.cpp  skui_selectable_link_tests.cpp
tests/fixtures/: transparent-vp9.webm
triplets/: x64-windows-static-md-ue57.cmake
